Bug 334204 - "Pan/Scroll" button option of Wacom driver doesn't work with Krita
Summary: "Pan/Scroll" button option of Wacom driver doesn't work with Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 2.8.1
Platform: unspecified Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-02 08:00 UTC by zhero12345
Modified: 2014-05-10 09:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is the log file that you asked for (290.39 KB, application/octet-stream)
2014-05-05 23:55 UTC, zhero12345
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zhero12345 2014-05-02 08:00:27 UTC
When using my Intous tablet model CTH 480, I press the drag button on the pen. Although it does indeed drag the canvas around, it also decides to make a line (or erase or depending on what too I using at the moment).

Reproducible: Always

Steps to Reproduce:
1.Press click & drag function on the pen.
2.Slide pen across tablet 
3.
Actual Results:  
A line is left along with the canvas being dragged

Expected Results:  
Just simply dragged the canvas

Using windows 8.1 64 bit
Comment 1 Halla Rempt 2014-05-02 08:06:43 UTC
Hi,

Thanks for your report. I haven't been able to reproduce yet, but it might be very dependent on driver version/tablet model or even tablet settings, like the settings for the stylus buttons. Did you do any custom configuration in the wacom settings app?
Comment 2 zhero12345 2014-05-02 08:12:32 UTC
Hi, 
I did not change any settings other than changing the windows key. I also have not altered the app itself, in fact I tried to re-install the driver again by going to Wacom's official website and getting the newest driver (It was still having issues even before the re-installing). 

(In reply to comment #1)
> Hi,
> 
> Thanks for your report. I haven't been able to reproduce yet, but it might
> be very dependent on driver version/tablet model or even tablet settings,
> like the settings for the stylus buttons. Did you do any custom
> configuration in the wacom settings app?
Comment 3 zhero12345 2014-05-02 08:15:30 UTC
I also have checked the forums to see if someone had a similar issue, all I could see was that using two tablets made well a mess. I bring this up because my laptop is touchscreen and I do not know if that would affect it.
Comment 4 Halla Rempt 2014-05-02 08:22:32 UTC
No... That shouldn't make a difference. I use a pth 650 with several touch-screen laptops and I don't have the problem.
Comment 5 zhero12345 2014-05-02 08:30:24 UTC
I used Auto desk sketchbook, one of the programs that was free with the tablet, and the drag function worked just fine in there. I could perhaps try to re-install krita, maybe a file is wrong or something? I also can still work around the issue by pressing the space bar and dragging that way.
Comment 6 Halla Rempt 2014-05-02 08:32:35 UTC
No... Reinstalling krita won't fix anything. It must be some kind of bug, probably in our tablet code, or some weirdness in this tablet type that our tablet code doesn't take into account...
Comment 7 zhero12345 2014-05-02 08:37:51 UTC
Oh ok, alright anyways thanks you so much for the help. And in such a quick manner too. I did not expected that fast of a response. If I find something else or for some reason I fix it or something, I will let you know but for now thanks for the help.
Comment 8 Halla Rempt 2014-05-02 08:44:47 UTC
We might get back to you to ask for some debug logs soonish -- tablet weirdnesses are things we do want to fix :-)
Comment 9 Dmitry Kazakov 2014-05-05 06:40:31 UTC
Hi, Zhero!

Could you generate a tablet log for us? Here is a small manual how to do it:

https://answers.launchpad.net/krita-ru/+faq/2494

On step 5) please do exactly one stroke with the drag button that reproduces the problem.
Comment 10 zhero12345 2014-05-05 23:55:35 UTC
Created attachment 86479 [details]
This is the log file that you asked for

Sorry that It took soo long. But here it is, again thank you for the help.
Comment 11 Dmitry Kazakov 2014-05-09 07:06:43 UTC
Hi, zhero!

Could you explain what do you mean by "drag button"? Do you mean the button assigned to "middle-mouse-click" or you mean the ability of the Wintab driver to activate the click only when touching the surface of the tablet? In the latter case the button on the stylus should work like a modifier, you press it, but the stroke is not yet started, but started only when you touch the surface of the tablet.


From the log I can see that Krita recognized several left-button clicks. Do you have this press+touch surface function activated?
Comment 12 Dmitry Kazakov 2014-05-09 08:05:03 UTC
The feature of the driver I was talking about is actually called "Click & Tap". And it works fine here with ET-0405A-U.

Probably, you are talking about "Pan/Scroll" feature? Which just emulates the scroll-bars signals?
Comment 13 Dmitry Kazakov 2014-05-09 09:51:48 UTC
Git commit 89ed21d5fda7799675d27dedb488afcfbf8f115b by Dmitry Kazakov.
Committed on 09/05/2014 at 09:46.
Pushed by dkazakov into branch 'master'.

Fix handling a tablet when "Pan/Scroll" mode is assigned to a button

We should not handle tablet events when the driver uses them for some
other action, e.g. "Pan/Scroll".

NOTE: Wacom's "Pan/Scroll" feature generates only vertical wheel scroll
      events, so I would still recommend using usual Middle-button panning
      instead.

WARNING: Right now we still generate TabletMove events, even if we know
         that the driver has eaten that event! Not sure if it is the best
         approach.

M  +25   -8    krita/ui/input/wintab/kis_tablet_support_win.cpp

http://commits.kde.org/calligra/89ed21d5fda7799675d27dedb488afcfbf8f115b
Comment 14 zhero12345 2014-05-09 17:58:33 UTC
Ohh thanks for all the help, sorry for answering I got sick. And yes it was the pan scroll feature. Again thanks for taking your time help solve this small issue.
Comment 15 Halla Rempt 2014-05-10 09:40:34 UTC
Git commit ccf3e76152627495df13ac58580c65d730131591 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 09/05/2014 at 09:46.
Pushed by rempt into branch 'calligra/2.8'.

Fix handling a tablet when "Pan/Scroll" mode is assigned to a button

We should not handle tablet events when the driver uses them for some
other action, e.g. "Pan/Scroll".

NOTE: Wacom's "Pan/Scroll" feature generates only vertical wheel scroll
      events, so I would still recommend using usual Middle-button panning
      instead.

WARNING: Right now we still generate TabletMove events, even if we know
         that the driver has eaten that event! Not sure if it is the best
         approach.

M  +25   -8    krita/ui/input/wintab/kis_tablet_support_win.cpp

http://commits.kde.org/calligra/ccf3e76152627495df13ac58580c65d730131591