Fix handling a tablet when "Pan/Scroll" mode is assigned to a button

We should not handle tablet events when the driver uses them for some
other action, e.g. "Pan/Scroll".

NOTE: Wacom's "Pan/Scroll" feature generates only vertical wheel scroll
      events, so I would still recommend using usual Middle-button panning
      instead.

WARNING: Right now we still generate TabletMove events, even if we know
         that the driver has eaten that event! Not sure if it is the best
         approach.

BUG:334204